[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/sprites/player.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/playerND.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/laser.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/rightlaser.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/rightspawner.png" type="Texture" id=5]
[ext_resource path="res://assets/fonts/BalsamiqSans-Bold.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Scripts/menu.gd" type="Script" id=7]
[ext_resource path="res://assets/sprites/upright.png" type="Texture" id=8]
[ext_resource path="res://Scripts/ControlsMenu.gd" type="Script" id=9]

[sub_resource type="DynamicFont" id=1]
size = 60
outline_size = 2
outline_color = Color( 0.631373, 0, 1, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=33]
size = 36
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 6 )

[node name="TitleMenu" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="ColorRect" parent="."]
margin_left = -4.0
margin_right = 512.0
margin_bottom = 288.0
color = Color( 0.0941176, 0.0823529, 0.0823529, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player" type="Sprite" parent="MainMenu"]
modulate = Color( 1, 1, 1, 0.545098 )
position = Vector2( 236, 172 )
texture = ExtResource( 1 )

[node name="rightspawner" type="Sprite" parent="MainMenu"]
position = Vector2( 16, 140 )
texture = ExtResource( 5 )

[node name="rightlaser" type="Sprite" parent="MainMenu"]
position = Vector2( 112, 140 )
texture = ExtResource( 4 )

[node name="rightlaser7" type="Sprite" parent="MainMenu"]
position = Vector2( 48, 140 )
texture = ExtResource( 4 )

[node name="laser" type="Sprite" parent="MainMenu"]
position = Vector2( 144, 140 )
texture = ExtResource( 3 )

[node name="laser6" type="Sprite" parent="MainMenu"]
position = Vector2( 80, 140 )
texture = ExtResource( 3 )

[node name="rightlaser2" type="Sprite" parent="MainMenu"]
position = Vector2( 176, 140 )
texture = ExtResource( 4 )

[node name="rightlaser3" type="Sprite" parent="MainMenu"]
position = Vector2( 239, 140 )
texture = ExtResource( 4 )

[node name="rightlaser4" type="Sprite" parent="MainMenu"]
position = Vector2( 303, 140 )
texture = ExtResource( 4 )

[node name="rightlaser5" type="Sprite" parent="MainMenu"]
position = Vector2( 367, 140 )
texture = ExtResource( 4 )

[node name="rightlaser6" type="Sprite" parent="MainMenu"]
position = Vector2( 431, 140 )
texture = ExtResource( 4 )

[node name="rightlaser8" type="Sprite" parent="MainMenu"]
position = Vector2( 495, 140 )
texture = ExtResource( 4 )

[node name="laser2" type="Sprite" parent="MainMenu"]
position = Vector2( 208, 140 )
texture = ExtResource( 3 )

[node name="laser3" type="Sprite" parent="MainMenu"]
position = Vector2( 271, 140 )
texture = ExtResource( 3 )

[node name="laser5" type="Sprite" parent="MainMenu"]
position = Vector2( 399, 140 )
texture = ExtResource( 3 )

[node name="laser7" type="Sprite" parent="MainMenu"]
position = Vector2( 463, 140 )
texture = ExtResource( 3 )

[node name="laser8" type="Sprite" parent="MainMenu"]
position = Vector2( 527, 140 )
texture = ExtResource( 3 )

[node name="laser4" type="Sprite" parent="MainMenu"]
position = Vector2( 335, 140 )
texture = ExtResource( 3 )

[node name="playerND" type="Sprite" parent="MainMenu"]
position = Vector2( 300, 108 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="MainMenu"]
margin_left = 48.0
margin_top = 16.0
margin_right = 528.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 1 )
text = "MAZERBEAMS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="MainMenu"]
margin_left = 64.0
margin_top = 220.0
margin_right = 168.0
margin_bottom = 252.0
custom_fonts/font = SubResource( 2 )
text = "play game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="MainMenu"]
margin_left = 344.0
margin_top = 220.0
margin_right = 448.0
margin_bottom = 252.0
custom_fonts/font = SubResource( 3 )
text = "controls"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlsMenu" type="ColorRect" parent="."]
visible = false
margin_left = -4.0
margin_right = 544.0
margin_bottom = 288.0
color = Color( 0.0941176, 0.0823529, 0.0823529, 1 )
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ControlsMenu"]
margin_left = 16.0
margin_right = 552.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 33 )
text = "hello welcome to the controls"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="ControlsMenu"]
margin_left = 64.0
margin_top = 52.0
margin_right = 176.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 33 )
text = "JUMP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label6" type="Label" parent="ControlsMenu"]
margin_left = 124.0
margin_top = 224.0
margin_right = 444.0
margin_bottom = 272.0
custom_fonts/font = SubResource( 33 )
text = "CASUALLY WALK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="ControlsMenu"]
margin_left = 352.0
margin_top = 52.0
margin_right = 464.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 33 )
text = "DASH"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player" type="Sprite" parent="ControlsMenu"]
position = Vector2( 84, 176 )
texture = ExtResource( 1 )

[node name="upright" type="Sprite" parent="ControlsMenu"]
position = Vector2( 116, 144 )
texture = ExtResource( 8 )

[node name="player2" type="Sprite" parent="ControlsMenu"]
position = Vector2( 144, 112 )
texture = ExtResource( 1 )

[node name="player3" type="Sprite" parent="ControlsMenu"]
position = Vector2( 336, 144 )
texture = ExtResource( 1 )

[node name="upright2" type="Sprite" parent="ControlsMenu"]
position = Vector2( 400, 144 )
texture = ExtResource( 8 )

[node name="playerND" type="Sprite" parent="ControlsMenu"]
position = Vector2( 464, 112 )
texture = ExtResource( 2 )

[node name="Label4" type="Label" parent="ControlsMenu"]
margin_left = 24.0
margin_top = 193.0
margin_right = 185.0
margin_bottom = 224.0
text = "Keyboard: Z, Space, Enter
XB1: A, Y"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label7" type="Label" parent="ControlsMenu"]
margin_left = 168.0
margin_top = 268.0
margin_right = 364.0
margin_bottom = 299.0
text = "wasd, arrow keys, analog, dpad"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="ControlsMenu"]
margin_left = 312.0
margin_top = 192.0
margin_right = 473.0
margin_bottom = 223.0
text = "Keyboard: LShift, RShift
XB1: B, X, RT"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player4" type="Sprite" parent="ControlsMenu"]
position = Vector2( 80, 268 )
texture = ExtResource( 1 )

[node name="player5" type="Sprite" parent="ControlsMenu"]
position = Vector2( 464, 268 )
texture = ExtResource( 1 )

[node name="Button" type="Button" parent="ControlsMenu"]
margin_left = 204.0
margin_top = 124.0
margin_right = 299.0
margin_bottom = 156.0
custom_fonts/font = SubResource( 5 )
text = "cool thanks"
[connection signal="pressed" from="MainMenu/Button" to="." method="_play_button"]
[connection signal="pressed" from="MainMenu/Button2" to="." method="_show_controls"]
[connection signal="coolThanks" from="ControlsMenu" to="." method="_on_ControlsMenu_coolThanks"]
[connection signal="pressed" from="ControlsMenu/Button" to="ControlsMenu" method="_on_Button_pressed"]
